# EscrowX-Secure-Freelance-Payments-on-Stellar-Public-2.o

./: .gitignore  README.md  pitch_deck.md  user_feedback.xlsx  user_feedback_responses.csv  user_wallet_feedback.xlsx
.github/workflows/: frontend.yml  smart_contract.yml
contract/src/: lib.rs
contract/test_snapshots/test/: test_escrow_workflow.1.json  test_refund_by_freelancer.1.json
contracts/: Cargo.toml
contracts/src/: lib.rs
contracts/test_snapshots/test/: test_refund_by_client_after_expiry.1.json
frontend/: check_escrows.js  complete_missing_txs.js  deploy.js  generate_40_completed_txs.js  generate_40_txs.js  index.html  package-lock.json  package.json  tx_output.json
frontend/src/: App.jsx  index.css  main.jsx  stellar.js  supabaseClient.js
frontend/src/components/: EscrowCard.jsx  Navbar.jsx
frontend/src/pages/: CreateEscrow.jsx  Dashboard.jsx  EscrowDetails.jsx  Feedback.jsx  Landing.jsx
